| Summary: | ASTERISK-26983: Crash in Manager Reload when TLS Config Changes | ||
| Reporter: | Joshua Elson (joshelson) | Labels: | |
| Date Opened: | 2017-05-04 15:53:43 | Date Closed: | 2017-05-11 10:36:31 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | |
| Versions: | 13.15.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) manager-reload-tcptls_crash.txt | |
| Description: | Crash observed when AMI reloads with changed tcpcls config.
We have patched and will submit reviewboard. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-05-04 15:53:44.274-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Joshua Elson (joshelson) 2017-05-04 15:54:10.423-0500 Backtrace. By: Friendly Automation (friendly-automation) 2017-05-11 10:36:32.637-0500 Change 5583 merged by Jenkins2: Prevent Undefined Capath Crash [https://gerrit.asterisk.org/5583|https://gerrit.asterisk.org/5583] By: Friendly Automation (friendly-automation) 2017-05-11 10:40:03.780-0500 Change 5585 merged by Jenkins2: Prevent Undefined Capath Crash [https://gerrit.asterisk.org/5585|https://gerrit.asterisk.org/5585] By: Friendly Automation (friendly-automation) 2017-05-11 11:48:57.558-0500 Change 5584 merged by Joshua Colp: Prevent Undefined Capath Crash [https://gerrit.asterisk.org/5584|https://gerrit.asterisk.org/5584] | ||